--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "simple-stripe-payments",
   "version": "0.1.0",
   "main": "Gruntfile.js",
-  "author": "YOUR NAME HERE",
+  "author": "brainstormforce",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-wp-i18n": "~0.5.0",
-    "grunt-wp-readme-to-markdown": "~1.0.0"
+    "grunt": "^1.1.0",
+    "grunt-wp-i18n": "^1.0.3",
+    "grunt-wp-readme-to-markdown": "~2.0.1",
+    "js-yaml": ">=3.13.1",
+    "minimatch": ">=3.0.2",
+    "underscore.string": ">=3.3.5",
+    "lodash": ">=4.17.12"
   }
 }
